--- a/root/css/style.css
+++ b/root/css/style.css
@@ -15,6 +15,12 @@ h1 {
   color: #e2dbdb;
 }
 
+.btn {
+  font-weight: 700;
+  border-radius: 300px;
+  text-transform: uppercase;
+}
+
 .btn-xl {
   padding: 1rem 2rem;
 }
