Customized .btn_primary class for button color

--- a/root/css/style.css
+++ b/root/css/style.css
@@ -21,6 +21,11 @@ h1 {
   text-transform: uppercase;
 }
 
+.btn-primary {
+  background-color: #f05f44;
+  border: #f05f44;
+}
+
 .btn-xl {
   padding: 1rem 2rem;
 }
